<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout">


    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="onIdealWeightClick"
            android:orientation="horizontal"
            android:padding="16dp" android:focusable="true">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/weight"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/ideal_weight"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="onCalorieCalculatorClick"
            android:orientation="horizontal"
            android:padding="16dp" android:focusable="true">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/calorie_calculator"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/calorie"
                tools:ignore="ContentDescription"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="onBodyTypeClick"
            android:orientation="horizontal"
            android:padding="16dp" android:focusable="true">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/body"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/body_type"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/drawer_listview"
        android:layout_width="240dp"
        android:layout_gravity="start"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:dividerHeight="2dp"
        android:entries="@array/listViewFragments"
        android:background="@color/listView"
        android:choiceMode="singleChoice"/>

</android.support.v4.widget.DrawerLayout>



